@@ -2,6 +2,7 @@ Version 5.2.0.5
 Cross-module inlining of trivial functions, plus map, for-each,
  andmap, and ormap; 'compiler-hint:cross-module-inline hint
 compiler/zo-structs: added inline-variant
+racket/stream: added stream constructor
 
 Version 5.2.0.4
 Regexps are `equal?' when they have the same source [byte] string
